--- a/css/webapp.css
+++ b/css/webapp.css
@@ -12,8 +12,8 @@ p{font-size:15px;}
 #container>nav>div{width:-moz-calc(100% - 18px);width:-webkit-calc(100% - 18px);min-width: 250px;height:44px;background-color: #151515;}
 #container>nav>div>input{margin: 6px;min-width: 243px;width: 100%;border: none;border-radius: 8px;height: 32px;padding: 10px;-webkit-box-shadow: inset 0 0 2px #000000;-moz-box-shadow: inset 0 0 2px #000000;box-shadow: inset 0 0 2px #000000;background-color: #e7e7e7;border-bottom: 1px solid #484848;font-size: 10px;}
 #container>nav>ul{width:-webkit-calc(100% - 10px);float:left;-webkit-padding-start: 0px;list-style:none;}
-#container>nav>ul>li{width:100%;background-image:url(../img/bt.jpg);height: 50px;border-top: 1px solid #303033;border-bottom: 1px solid #18181a;clear:both;}
-#container>nav>ul>li.click,#container>nav>ul>li[click='on']{background-image:url(../img/btHover.jpg);}
+#container>nav>ul>li{cursor: pointer;width:100%;background-image:url(../img/bt.jpg);height: 50px;border-top: 1px solid #303033;border-bottom: 1px solid #18181a;clear:both;}
+#container>nav>ul>li.click,#container>nav>ul>li[click='on']{background-image:url(../img/btHover.jpg);cursor: pointer;}
 #container>nav>ul>li>img{float:left;margin:10px;}
 #container>nav>ul>li>p{float:left;margin-top: 15px;}
 #container>nav>ul>li>p:last-child{float: right;margin-right: 10px;}
@@ -36,7 +36,7 @@ p{font-size:15px;}
 /*nav player*/
 #container>article>nav{border-top: 1px solid #545454;width: 100%;height:38px;background-image:url(../img/menuBt.jpg);box-shadow:0px 0px 4px 2px rgba(0, 0, 0, 1)}
 #container>article>nav>ul{color:#fff;position:absolute;}
-#container>article>nav>ul>li{padding: 0px 20px ;padding-top: 0px;margin-top: 10px;border-left: 1px solid #414141;border-right: 1px solid #030303;float: left;}
+#container>article>nav>ul>li{cursor: pointer;padding: 0px 20px ;padding-top: 0px;margin-top: 10px;border-left: 1px solid #414141;border-right: 1px solid #030303;float: left;}
 #container>article>nav>ul>li:hover{background-image:url(../img/menuBtHover.jpg);background-color: #151517;border:none;border-bottom:4px solid #159db2;margin-top: -1px;padding-top:11px; padding-right:21px; padding-left:21px; height:24px;}
 #container>article>nav>ul>li.active{background-image:url(../img/menuBtHover.jpg);background-color: #151517;border:none;border-bottom:4px solid #159db2;margin-top: -1px;padding-top:11px; padding-right:21px; padding-left:21px; height:24px;}
 /*Seciton global*/
@@ -88,8 +88,8 @@ div:nth-child(2).surface>div>h1{font-size: 45px;text-align:center;}
 #finales>div:first-child>div:nth-child(2)>h3{margin: 10px 0px;text-align:center;width:100%;}
 #finales>div:nth-child(2){width: -webkit-calc(100% / 5 * 2 - 11px);float:left;border-left:1px solid #242424;}
 #finales div>h3{clear:both;float:none;}
-#finales nav>ul>li{color:transparent;}
-#finales div.rightSelect,#finales div.leftSelect{color:transparent;}
+/*#finales nav>ul>li{color:transparent;}*/
+/*#finales div.rightSelect,#finales div.leftSelect{color:transparent;}*/
 
 /*#finales{overflow:hidden;}
 #finales>div:first-child{float:left;width: -webkit-calc(100% / 5 * 3 );height: -webkit-calc(100% - 60px );background-color: #171719;}
